--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             background: black;
         }
     </style>
-  <script type="module" crossorigin src="/index-C7gV7uZa.js"></script>
-  <link rel="stylesheet" crossorigin href="/index-j7Iao1tl.css">
+  <script type="module" crossorigin src="./index-C7gV7uZa.js"></script>
+  <link rel="stylesheet" crossorigin href="./index-j7Iao1tl.css">
 </head>
 
 <body>
