--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             background: black;
         }
     </style>
-  <script type="module" crossorigin src="./index-C7gV7uZa.js"></script>
+  <script type="module" crossorigin src="./index-U55pQiL9"></script>
   <link rel="stylesheet" crossorigin href="./index-j7Iao1tl.css">
 </head>
 
